force-app/main/default/objects/ICS_APIGEE_ConfigSettings__c/ICS_APIGEE_ConfigSettings__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>This custom settings can be used for exception handling for APIGEE integration purposes</description>
    <label>ICS_APIGEE_Settings</label>
</CustomObject>