force-app/main/default/objects/ICS_APIGEE_ConfigSettings__c/fields/Class_Name__c.field-meta.xml
<CustomField>
    <fullName>Class_Name__c</fullName>
    <label>Consumer Class Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>