force-app/main/default/objects/ICS_APIGEE_ConfigSettings__c/fields/ClientId__c.field-meta.xml
<CustomField>
    <fullName>ClientId__c</fullName>
    <label>ClientId</label>
    <length>100</length>
    <type>Text</type>
</CustomField>