force-app/main/default/objects/ICS_APIGEE_ConfigSettings__c/fields/GrantType__c.field-meta.xml
<CustomField>
    <fullName>GrantType__c</fullName>
    <label>GrantType</label>
    <length>100</length>
    <type>Text</type>
</CustomField>