force-app/main/default/objects/ICS_APIGEE_ConfigSettings__c/fields/setEndPointURL__c.field-meta.xml
<CustomField>
    <fullName>setEndPointURL__c</fullName>
    <label>setEndPointURL</label>
    <length>100</length>
    <type>Text</type>
</CustomField>