force-app/main/default/objects/ICS_APIGEE_ConfigSettings__c/fields/TokenEndPointURL__c.field-meta.xml
<CustomField>
    <fullName>TokenEndPointURL__c</fullName>
    <label>TokenEndPointURL</label>
    <length>100</length>
    <type>Text</type>
</CustomField>